// use a protobuf 3 defination as the persistent data format

syntax = "proto3";

package protos;

message PrivateKey {
    int32   version         = 1;
    int32   curvetype       = 2;
    bytes   rootFingerprint = 3;
    bytes   index           = 4;
    bytes   chaincode       = 5;
    bytes   d               = 6;
}

message PublicKey {
    int32   version         = 1;
	int32   curvetype       = 2;
    bytes   rootFingerprint = 3;
    bytes   index           = 4;
    bytes   chaincode       = 5;
    ECPoint p               = 6;
}

message Signature {
    ECPoint p = 1;
}

message ECPoint {
	bytes  x = 1;
	bytes  y = 2;
}

message ECSignature {
	bytes  r = 1;
    bytes  s = 2;
    int32  v = 3;
}

